# orderbook-aggregator

./: Cargo.toml  LICENSE  README.md  rustfmt.toml
.github/workflows/: ci-cd.yml
crates/orderbook-lib/: Cargo.toml
crates/orderbook-lib/src/: aggregator.rs  lib.rs  types.rs
crates/orderbook-lib/src/exchanges/: binance.rs  bitstamp.rs  config.rs  connector.rs  error.rs  level_parser.rs  mod.rs  runtime.rs
crates/orderbook-server/: Cargo.toml  build.rs
crates/orderbook-server/src/: main.rs  server.rs
crates/orderbook-server/src/app/: book_summary_service.rs  mod.rs
crates/orderbook-server/src/exchange_infra/: config.rs  connector.rs  error.rs  level_parser.rs  mod.rs  runtime.rs
crates/orderbook-server/src/exchanges/: binance.rs  bitstamp.rs
crates/orderbook-server/src/server/: mapping.rs  mod.rs  proto.rs
proto/: orderbook.proto
