[package]
name = "orderbook-lib"
version = "0.1.0"
edition = "2024"

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
tokio = { version = "1", features = ["sync", "time"] }
tokio-tungstenite = { version = "0.28.0", features = ["native-tls"] }
futures-util = "0.3"
tracing = "0.1"
rand.workspace = true
rust_decimal.workspace = true
smallvec.workspace = true
